--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -17,6 +17,11 @@ on:
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ "main" ]
+    paths:
+      - 'src'
+    paths-ignore:
+      - 'src/node_modules'
+      - '**/*.test.js'
   schedule:
     - cron: '35 7 * * 2'
 
