--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -18,7 +18,7 @@ on:
     # The branches below must be a subset of the branches above
     branches: [ "main" ]
     paths:
-      - 'src'
+      - 'src/app'
   schedule:
     - cron: '35 7 * * 2'
 
